add basic item for news project

--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -20,3 +20,41 @@ ul {
   box-sizing: border-box !important;
 }
 
+
+
+@media (max-width: 1199px) {
+  .container {
+    max-width: 940px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 720px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 540px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 592px) {
+  .container {
+    max-width: 100%;
+    padding: 0 16px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1050px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1250px;
+    margin: 0 auto;
+  }
+}
