complete main item and add new package

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -4,3 +4,10 @@
 @mixin fontFamilyClass {
   font-family: Montserrat !important;
 }
+
+@mixin MainClass {
+  border-radius: 18px;
+  background-color: pink;
+  margin-top: 20px;
+  padding: 12px;
+}
