--- a/src/container/MainItems/style.scss
+++ b/src/container/MainItems/style.scss
@@ -3,9 +3,6 @@
 .main_container {
   display: flex;
   flex-direction: column;
-  border-radius: toRem(18);
-  background-color: pink;
-  margin-top: toRem(20);
-  padding: toRem(12);
-  
+  width: 70%;
+  @include MainClass;
 }
