--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -7,7 +7,7 @@
 
 @mixin MainClass {
   border-radius: 18px;
-  background-color: pink;
+  background-color: $white;
   margin-top: 20px;
   padding: 12px;
 }
