add condition for filtering source

--- a/src/Layout/Header/style.scss
+++ b/src/Layout/Header/style.scss
@@ -4,6 +4,7 @@
 .header_container{
     padding: toRem(20) 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     .input_wrapper{
