--- a/src/container/MainItems/style.scss
+++ b/src/container/MainItems/style.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-bottom: toRem(20);
   @include MainClass;
   .main_wrapper{
     .title_news{
